--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,94 @@ body{
 .isActive {
     color: #e8bb45 !important;
 }
+
+.react-tabs {
+    -webkit-tap-highlight-color: transparent;
+  }
+  
+.react-tabs__tab-list {
+    border-bottom: 1px solid #e8bb45;
+    margin: 0 0 5px;
+    padding: 0;
+}
+  
+.react-tabs__tab {
+    background: #e5eaee;
+    display: flex;
+    position: relative;
+    list-style: none;
+    padding: 6px 12px;
+    cursor: pointer;
+}
+  
+.react-tabs__tab--selected {
+background: #FFF8DC;
+border: 1px solid #e8bb45 !important;
+color: black;
+border-radius: 2px;
+outline: none;
+}
+
+.react-tabs__tab-panel {
+display: none;
+}
+
+.react-tabs__tab-panel--selected {
+display: block;
+}
+
+form {
+    max-width: 400px;
+    width: 100%;
+    height: 500px;
+    padding: 20px 25px 30px;
+    color: #333;
+    margin: 20px;
+}
+
+form h3{
+    font-size: 30px;
+    text-align: center;
+}
+
+form .input-box{
+    margin-top: 20px;
+}
+
+.input-box .field{
+    width: 100%;
+    height: 50px;
+    border: 2px solid #ddd;
+    outline: none;
+    border-radius: 6px;
+    padding: 15px;
+    font-size: 16px;
+    color: #333;
+    margin-top: 8px;
+}
+
+.input-box .field.mess{
+    height: 200px;
+    resize: none;
+}
+
+form button{
+    width: 100%;
+    height: 25px;
+    background: #e8bb45;
+    color: #333;
+    font-size: 12px;
+    padding: 6px 6px;
+    border: none;
+    border-radius: 6px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    font-weight: 500;
+    margin-top: 4px;
+    transition: background 0.3s ease;
+}
+
+form button:hover{
+    background: #e3c79c;
+}
+
