--- a/src/App.css
+++ b/src/App.css
@@ -66,11 +66,12 @@ form .input-box{
 .input-box .field{
     width: 100%;
     height: 50px;
-    border: 2px solid #ddd;
+    border: 1px solid #e8bb45;
     outline: none;
     border-radius: 6px;
     padding: 15px;
-    font-size: 16px;
+    font-size: 12px;
+    font-weight: 200;
     color: #333;
     margin-top: 8px;
 }
@@ -86,7 +87,7 @@ form button{
     background: #e8bb45;
     color: #333;
     font-size: 12px;
-    padding: 6px 6px;
+    padding: 6px;
     border: none;
     border-radius: 6px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
