--- a/src/App.css
+++ b/src/App.css
@@ -94,6 +94,7 @@ form button{
     cursor: pointer;
     font-weight: 500;
     margin-top: 4px;
+    margin-bottom: 4px;
     transition: background 0.3s ease;
 }
 
