--- a/src/App.css
+++ b/src/App.css
@@ -82,6 +82,9 @@ form .input-box{
 }
 
 form button{
+    display:flex;
+    align-items:center;
+    justify-content:center;
     width: 100%;
     height: 25px;
     background: #e8bb45;
@@ -93,8 +96,7 @@ form button{
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     cursor: pointer;
     font-weight: 500;
-    margin-top: 4px;
-    margin-bottom: 4px;
+    margin: 4px;
     transition: background 0.3s ease;
 }
 
