--- a/src/App.css
+++ b/src/App.css
@@ -82,9 +82,6 @@ form .input-box{
 }
 
 form button{
-    display:flex;
-    align-items:center;
-    justify-content:center;
     width: 100%;
     height: 25px;
     background: #e8bb45;
@@ -96,7 +93,7 @@ form button{
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     cursor: pointer;
     font-weight: 500;
-    margin: 4px;
+    margin-top: 2px;
     transition: background 0.3s ease;
 }
 
